<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setting_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <include
        android:id="@+id/chat_title"
        layout="@layout/new_ui_idt_title_otherpage_layout" />

    <TextView
        android:id="@+id/version"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="V1.0.1"
        android:textColor="#000000"
        android:textSize="19sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_weight="8"
        android:orientation="vertical"
        android:padding="6dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="2"
            android:background="#F0F0F2"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/commany_indroduce"
                android:textColor="#0064c8"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/commany_indroduce"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:fadeScrollbars="false"
                android:focusableInTouchMode="true"
                android:scrollbars="vertical"
                android:text="@string/commany_indroduce_file"
                android:textColor="#000000"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_marginTop="6dip"
            android:layout_weight="1"
            android:background="#F0F0F2"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fadeScrollbars="false"
                android:scrollbars="vertical"
                android:text="联系我们"
                android:textColor="#0064c8"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/contact_information"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:text="@string/contact_information"
                android:textColor="#000000"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="150dp"
        layout="@layout/new_ui_intercom_module" />

</LinearLayout>